# fastapi-sqlalchemy-ddd-template

./: .gitignore  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  dockerfile  makefile  pyproject.toml  setup.cfg  speed_spiking.py
backend/: README.md  dockerfile  model_spicking.py  pyproject.toml
backend/conf/postgres/: dockerfile
backend/docker/: dockerfile.prod
backend/docs/: ddd.md  dep_injector.md  sqlalchemy.md  transaction_problems.md  utils.md
backend/examples/: api.py
backend/examples/blog/application/command/: create_post.py
backend/examples/blog/domain/: entitites.py  value_objects.py
backend/examples/blog/infra/: models.py  repositories.py
backend/examples/blog/presentation/: api.py  schema.py
backend/examples/blog/tests/presentation/: test_delete_post.py  test_update_post.py
backend/examples/rabbitmq/: config.py  container.py  main.py
backend/examples/rabbitmq/seedwork/: rabbitmq.py
backend/migrations/: env.py
backend/migrations/versions/: 02876ccfba0e_.py  81339dd61c77_.py  8f6007dbba3b_.py  9f369978397e_.py  aaf8458cfbbd_.py  ab16e5d47b47_.py  b4f29b678ca3_.py  bac184bb6c0a_.py  fb27a8447e73_.py
backend/pubsub/: redis.conf
backend/src/: config.py  container.py  containers.py  main.py
backend/src/auth/application/command/: register_account.py
backend/src/auth/application/query/: get_accounts.py
backend/src/auth/domain/: entities.py  repositories.py  value_objects.py
backend/src/auth/infra/: mappers.py  models.py  repositories.py  tables.py
backend/src/auth/presentation/: api.py
backend/src/blog/application/command/: __init__.py  create_post.py  delete_post.py  update_post.py
backend/src/blog/application/event/: notify_developers.py
backend/src/blog/application/query/: get_post.py  model_mappers.py
backend/src/blog/domain/: entitites.py  events.py  repositories.py
backend/src/blog/infra/: mappers.py  models.py  repositories.py
backend/src/blog/presentation/: api.py  schema.py
backend/src/health/presentation/: api.py  router.py  schema.py  schemes.py
backend/src/iam/application/command/: register_account.py
backend/src/iam/application/event/: notify_developers.py
backend/src/iam/domain/: entities.py  repositories.py  value_objects.py
backend/src/iam/infra/: mappers.py  models.py  repositories.py
backend/src/iam/presentation/: api.py  schemas.py
backend/src/orders/domain/: entities.py  repositories.py  value_objects.py
backend/src/orders/infra/: mappers.py  models.py  repositories.py
backend/src/post/application/command/: __init__.py  create_post.py  delete_post.py  update_post.py
backend/src/post/domain/: entitites.py  repositories.py
backend/src/post/infra/: repositories.py  tables.py
backend/src/post/presentation/: api.py  router.py  schema.py
backend/src/seedwork/application/: commands.py  dtos.py  events.py  messagebus.py  queries.py
backend/src/seedwork/domain/: async_structs.py  collection.py  entities.py  errors.py  events.py  mapper.py  mappers.py  repositories.py  services.py  structs.py  uows.py  validators.py  value_objects.py
backend/src/seedwork/infra/: awaitable_attrs.py  database.py  functional.py  injector.py  mapper.py  repositories.py  repository.py  uows.py
backend/src/seedwork/presentation/: error_handlers.py  factories.py  json_dtos.py  utils.py
backend/src/seedwork/utils/: functional.py
backend/src/shared/application/: commands.py  dtos.py  event_handler.py  events.py  message_bus.py  messagebus.py  queries.py  utils.py
backend/src/shared/domain/: entities.py  errors.py  exceptions.py  pydantic_v1.py  repositories.py  repository.py  uow.py  uows.py  value_objects.py
backend/src/shared/infra/: database.py  logging.py
backend/src/shared/presentation/: container.py  dependencies.py  exception_handlers.py  exceptions.py  json_dtos.py  message_bus.py  utils.py
backend/src/shared/utils/: functional.py
backend/src/shared_kernel/domain/: uows.py  value_objects.py
backend/src/shared_kernel/infra/: database.py
backend/src/shared_kernel/presentation/: dependencies.py
backend/tests/: config.py  conftest.py  container.py  containers.py
backend/tests/auth/infra/: test_mappers.py
backend/tests/blog/application/: conftest.py
backend/tests/blog/domain/: test_entities.py
backend/tests/blog/presentation/: test_create_post.py  test_delete_post.py  test_get_post.py  test_update_post.py
backend/tests/examples/: api.py
backend/tests/health/presentation/: test_health.py  test_health_check.py  test_overriden_title.py
backend/tests/iam/infra/: test_mappers.py  test_repositories.py
backend/tests/iam/presentation/: test_account_can_handle_concurrency.py  test_api.py
backend/tests/orders/domain/: test_alist.py  test_async_structs.py  test_entities.py
backend/tests/orders/infra/: test_mappers.py  test_small_aggregates.py
backend/tests/post/application/: conftest.py
backend/tests/post/domain/: test_entities.py
backend/tests/post/infra/: conftest.py  test_db_constraints.py  test_tables.py
backend/tests/post/presentation/: conftest.py  test_create_post.py  test_delete_post.py  test_get_post.py  test_update_post.py
backend/tests/seedwork/: conftest.py
backend/tests/seedwork/application/: conftest.py  test_dto.py  test_handlers.py
backend/tests/seedwork/confdata/: container.py  containers.py  domain.py  entities.py  events.py  mappers.py  models.py  ports.py  repositories.py  uow.py
backend/tests/seedwork/domain/: test_entities.py  test_structs.py  test_value_objects.py
backend/tests/seedwork/infra/: conftest.py  test_awaitable_attrs.py  test_database.py  test_huge_mappers.py  test_mappers.py  test_model.py  test_model_base.py  test_models.py  test_repositories.py  test_uows.py
backend/tests/seedwork/presentation/: test_api.py
backend/tests/shared/: conftest.py
backend/tests/shared/application/: test_message_bus.py
backend/tests/shared/conftest_data/: domain.py  repositories.py  tables.py
backend/tests/shared/domain/: test_entities.py
backend/tests/shared/presentation/: test_utils.py
docs/: locks.md
(+273 files in other folders)
