[tool.poetry]
name = "sqlalchemy-mapping"
version = "0.1.0"
description = ""
authors = ["emurze <grayemurze@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.27"
pytest = "^8.0.2"
pytest-asyncio = "^0.23.5"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
black = "^24.2.0"
mypy = "^1.8.0"
flake8 = "^7.0.0"
fastapi = "^0.110.0"
asyncpg = "^0.29.0"
uvicorn = "^0.27.1"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
