[tool.poetry]
name = "sqlalchemy-mapping"
version = "0.1.0"
description = ""
authors = ["emurze <grayemurze@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.27"
pytest = "^8.0.2"
pytest-asyncio = "^0.23.5"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
black = "^24.2.0"
mypy = "^1.8.0"
flake8 = "^7.0.0"
fastapi = "^0.110.0"
asyncpg = "^0.29.0"
uvicorn = "^0.27.1"
httpx = "^0.27.0"
redis = "4.5"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
types-redis = "^4.6.0.20240218"


[tool.poetry.dev-dependencies]
poethepoet = "^0.25.0"
pytest-cov = "^4.1.0"


[tool.poe.tasks]
test_domain =      "docker exec -it api poetry run pytest -s -k domain"
test_infra =       "docker exec -it api poetry run pytest -s -k infra"
test_application = "docker exec -it api poetry run pytest -s -k application"
test_unit =        "docker exec -it api poetry run pytest -s -m unit"
test_integration = "docker exec -it api poetry run pytest -s -m integration"
test_e2e =         "docker exec -it api poetry run pytest -s -m e2e"
test_coverage =    "docker exec -it api bash -c 'cd src && poetry run pytest -s --cov=. --cov-report=html'"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
