[tool.poetry]
name = "fastapi-sqlalchemy-ddd"
version = "0.1.0"
description = ""
authors = ["emurze <grayemurze@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.27"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
pytest = "^8.0.2"
pytest-asyncio = "^0.23.5"
alembic = "^1.13.1"
black = "^24.2.0"
mypy = "^1.8.0"
flake8 = "^7.0.0"
fastapi = "^0.110.0"
asyncpg = "^0.29.0"
uvicorn = "^0.27.1"
httpx = "^0.27.0"
redis = "4.5"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
types-redis = "^4.6.0.20240218"
flake8-pyproject = "^1.2.3"
dependency-injector = "^4.41.0"


[tool.poetry.dev-dependencies]
poethepoet = "^0.25.0"
pytest-cov = "^4.1.0"

[tool.poe.tasks]
# Testing
test             = "docker exec -it api poetry run bash -c 'cd tests && pytest -m unit && pytest -m integration && pytest -m e2e'"
test_domain      = "docker exec -it api bash -c 'cd tests && poetry run pytest -s -k domain'"
test_infra       = "docker exec -it api bash -c 'cd tests && poetry run pytest -s -k infra'"
test_application = "docker exec -it api bash -c 'cd tests && poetry run pytest -s -k application'"
test_unit        = "docker exec -it api bash -c 'cd tests && poetry run pytest -s -m unit'"
test_integration = "docker exec -it api bash -c 'cd tests && poetry run pytest -s -m integration'"
test_e2e         = "docker exec -it api bash -c 'cd tests && poetry run pytest -s -m e2e'"
test_coverage    = "docker exec -it api bash -c 'cd tests && poetry run pytest -s --cov=src --cov-report=html'"

# Linting, Formatting, and Type Checking
format           = "poetry run black . -l 79 tests src"
lint             = "poetry run flake8 --toml-config pyproject.toml src tests"
check_types      = "poetry run mypy src tests"

# Run, Down
run              = "docker compose up --build"
restart          = "docker compose down && docker compose up --build"
down             = "docker compose down"
clean            = "docker compose down -v"
run_server       = "poetry run uvicorn --host 0.0.0.0 --port 8080 --reload"

# Migrations
makemigrations   = "docker exec -it api poetry run alembic revision --autogenerate"
migrate          = "docker exec -it api poetry run alembic upgrade head"
row-migrate      = "poetry run alembic upgrade head"

[tool.poe.tasks.check_all]
sequence = ["lint", "check_types", "test"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.flake8]
exclude = [".git", "*migrations*", "*settings*"]
max-line-length = 100
ignore = ["E402", "E501", "E704", "F401", "W503"]


[tool.pytest.ini_options]
filterwarnings = [
    # ignore TestRunner class from facade .env
    "ignore::Warning:.*test class 'TestRunner'.*",
    "ignore::DeprecationWarning:httpx.*"
]
addopts = ["-rsxX", "-l", "--tb=short", "--strict-markers"]
xfail_strict = true
cache_dir = ".cache/pytest"
asyncio_mode = "auto"
markers = [
    "unit: marks test as unit test i.e. not using any external services (deselect with '-m \"not unit\"')",
    "integration: marks tests as integration i.e. using a database (deselect with '-m \"not integration\"')",
    "e2e: marks tests as e2e tests i.e. using a client api and a database (deselect with '-m \"not e2e\"')"
]
pythonpath = [
    ".",
    "src",
]


[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
cache_dir = ".cache/mypy"
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
exclude = ["migrations"]
